Squashed commit of the following:
commit 64a0c59072f7bd429f7f6e65cf738f7b85959c1e
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Sun Aug 3 17:41:19 2025 +0100

    Everything is documented

commit 5286a8730c45699cf4b5047b40818253263472a1
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Sun Aug 3 16:20:01 2025 +0100

    Added -tabs option to enable markdown content tabs

commit a151e1671b2035e42702c5527eb407a44d91732e
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Sun Aug 3 15:36:01 2025 +0100

    File creation now handled by Context class

commit 2948fec94fb0362937f708ec129ef2aaa712db54
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Sun Aug 3 12:03:28 2025 +0100

    Made Context a singleton